TINY-9125: Make sure tooltip is visible above the dialog

--- a/modules/oxide/src/less/theme/components/tooltip/tooltip.less
+++ b/modules/oxide/src/less/theme/components/tooltip/tooltip.less
@@ -18,7 +18,14 @@
   .tox-tooltip {
     display: inline-block;
     padding: @tooltip-arrow-size;
+    /* The pointer-events: none is designed to make mouse events bleed through the tooltip
+     * to the underlying items. For example, a mouse hovering over a tooltip that hovers over
+     * another item should trigger the hover of the item obscured by the tooltip, even though
+     * the tooltip is on top
+     */
+    pointer-events: none;
     position: relative;
+    z-index: @z-index-menu;
   }
 
   .tox-tooltip__body {
